an neue api angepasst, remove unused code